# neural-2a

./: .gitignore  CMakeLists.txt  README.md
Plugin/: CMakeLists.txt
Plugin/Neural2A/: CMakeLists.txt
Plugin/Neural2A/Source/: Parameters.h  PluginEditor.cpp  PluginProcessor.cpp  PluginProcessor.h
models/: traced_1-uTCN-300__causal__4-10-13__fraction-0.01-bs32.pt  traced_10-LSTM-32__1-32__fraction-1.0-bs32.pt  traced_11-uTCN-300__causal__3-60-5__fraction-1.0-bs32.pt  traced_13-uTCN-300__noncausal__30-2-15__fraction-1.0-bs32.pt  traced_14-uTCN-324-16__noncausal__10-2-15__fraction-1.0-bs32.pt  traced_2-uTCN-100__causal__4-10-5__fraction-1.0-bs32.pt  traced_3-uTCN-300__causal__4-10-13__fraction-1.0-bs32.pt  traced_4-uTCN-1000__causal__5-10-5__fraction-1.0-bs32.pt  traced_5-uTCN-100__noncausal__4-10-5__fraction-1.0-bs32.pt  traced_6-uTCN-300__noncausal__4-10-13__fraction-1.0-bs32.pt  traced_7-uTCN-1000__noncausal__5-10-5__fraction-1.0-bs32.pt  traced_8-TCN-300__noncausal__10-2-15__fraction-1.0-bs32.pt  traced_9-uTCN-300__causal__4-10-13__fraction-0.1-bs32.pt
